--- a/blow_candle.html
+++ b/blow_candle.html
@@ -56,29 +56,29 @@
       animation: fadeIn 1.5s ease-in;
     }
 
+    /* Center envelope section vertically and horizontally */
     #envelope-section {
-      margin-top: 50px;
+      display: flex;
+      justify-content: center; /* horizontal center */
+      align-items: center;     /* vertical center */
+      height: 100vh;           /* full viewport height */
       border: 2px solid #e17055;
       border-radius: 10px;
       background: #fff5f8;
       max-width: 350px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto;          /* horizontally center the section */
       padding: 10px;
-      display: none;
+      display: none;           /* initially hidden, will show via JS */
       animation: fadeIn 1.5s ease-in;
-    }
-
-    h2 {
-      text-align: center;
-      margin-top: 40px;
+      box-sizing: border-box;
     }
 
     .envelope-container {
       display: flex;
       justify-content: center;
+      align-items: center;
       cursor: pointer;
-      margin-top: 20px;
+      width: 100%;             /* take full width of envelope-section */
     }
 
     .envelope {
@@ -137,7 +137,6 @@
 <body>
 
 <div class="section" id="candle-section">
-
 
   <!-- 🎂 Candle Blowing Section -->
   <div id="candle-section">
@@ -233,7 +232,7 @@
 
       // Delay for envelope
       setTimeout(() => {
-        document.getElementById("envelope-section").style.display = "block";
+        document.getElementById("envelope-section").style.display = "flex";
         window.scrollTo({ 
           top: document.getElementById("envelope-section").offsetTop, 
           behavior: "smooth" 
