--- a/blow_candle.html
+++ b/blow_candle.html
@@ -1,250 +1,189 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <style>
-    body {
-      background-color: #fff0f5;
-      font-family: 'Georgia', serif;
-      margin: 0;
-      padding: 0;
-      color: #2c3e50;
-      display: flex;
-      flex-direction: column;
-      align-items: center; /* center everything horizontally */
-      min-height: 100vh;
-      padding: 50px 10px;
-      box-sizing: border-box;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Centered Candle & Letter</title>
+<style>
+  /* Reset & base */
+  body, html {
+    margin: 0; padding: 0; height: 100%;
+    background-color: #fff0f5;
+    font-family: 'Georgia', serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center horizontally */
+    justify-content: flex-start;
+    color: #2c3e50;
+  }
 
-    .section {
-      max-width: 800px;
-      width: 100%;
-      margin-bottom: 60px;
-      padding: 20px;
-      box-sizing: border-box;
-    }
+  .section {
+    width: 100%;
+    max-width: 800px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin-top: 40px;
+  }
 
-    #candle-section {
-      text-align: center;
-      border: 2px solid #e17055;
-      border-radius: 10px;
-      background: #fff5f8;
-      max-width: 320px;
-      padding: 20px;
-      box-sizing: border-box;
-    }
+  /* Candle Section */
+  #candle-section {
+    max-width: 320px;
+    margin: 0 auto;
+    background: #fff5f8;
+    border: 2px solid #e17055;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+  }
 
-    #candle {
-      width: 100px;
-      height: 200px;
-      background: url("{{candle_unlit}}") no-repeat center/contain;
-      margin: 0 auto;
-    }
+  #candle {
+    width: 100px;
+    height: 200px;
+    margin: 0 auto 10px auto;
+    background: url("https://via.placeholder.com/100x200?text=Candle") no-repeat center/contain;
+  }
 
-    #blown {
-      display: none;
-      font-size: 24px;
-      color: green;
-      margin-top: 10px;
-    }
+  #blown {
+    display: none;
+    font-size: 24px;
+    color: green;
+    margin-top: 10px;
+  }
 
-    #picture-section {
-      text-align: center;
-      border: 2px solid #e17055;
-      border-radius: 10px;
-      background: #fff5f8;
-      max-width: 600px;
-      padding: 20px;
-      box-sizing: border-box;
-      display: none;
-      animation: fadeIn 1.5s ease-in;
-      margin: 0 auto;
-    }
+  /* Picture Section */
+  #picture-section {
+    max-width: 600px;
+    margin: 40px auto 0 auto;
+    background: #fff5f8;
+    border: 2px solid #e17055;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    display: none;
+    animation: fadeIn 1.5s ease-in;
+  }
 
-    #envelope-section {
-      border: 2px solid #e17055;
-      border-radius: 10px;
-      background: #fff5f8;
-      max-width: 350px;
-      padding: 20px;
-      box-sizing: border-box;
-      display: none;
-      animation: fadeIn 1.5s ease-in;
-      margin: 0 auto;
-    }
+  /* Envelope Section */
+  #envelope-section {
+    max-width: 350px;
+    margin: 40px auto 40px auto;
+    background: #fff5f8;
+    border: 2px solid #e17055;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    display: none;
+    animation: fadeIn 1.5s ease-in;
+  }
 
-    h2 {
-      margin-top: 0;
-    }
+  /* Envelope container */
+  .envelope-container {
+    cursor: pointer;
+    perspective: 1000px;
+  }
 
-    .envelope-container {
-      display: flex;
-      justify-content: center;
-      cursor: pointer;
-      margin-top: 20px;
-    }
+  /* Envelope styles */
+  .envelope {
+    width: 300px;
+    min-height: 400px;
+    background: #f8c291;
+    border: 2px solid #e17055;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1s ease-in-out;
+    margin: 0 auto; /* Center the envelope */
+  }
 
-    .envelope {
-      position: relative;
-      width: 300px;
-      min-height: 400px;
-      background: #f8c291;
-      overflow: hidden;
-      border: 2px solid #e17055;
-      border-radius: 10px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    }
+  .envelope.open {
+    transform: rotateX(-180deg);
+  }
 
-    .envelope .flap {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 50%;
-      background: #e17055;
-      transform-origin: top;
-      transition: transform 1s ease-in-out;
-      z-index: 2;
-      border-bottom: 2px solid #d35400;
-    }
+  /* Flap */
+  .flap {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 50%;
+    background: #e17055;
+    transform-origin: top;
+    border-bottom: 2px solid #d35400;
+    backface-visibility: hidden;
+  }
 
-    .envelope.open .flap {
-      transform: rotateX(-180deg);
-    }
+  /* Letter */
+  .letter {
+    position: absolute;
+    top: 100%; left: 0;
+    width: 100%;
+    padding: 20px;
+    background: #fff;
+    color: #2d3436;
+    box-sizing: border-box;
+    max-height: 500px;
+    overflow-y: auto;
+    transition: top 1s ease-in-out;
+    backface-visibility: hidden;
+  }
 
-    .envelope .letter {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      padding: 20px;
-      background: #fff;
-      color: #2d3436;
-      box-sizing: border-box;
-      transition: top 1s ease-in-out;
-      max-height: 500px;
-      overflow-y: auto;
-      z-index: 1;
-    }
+  .envelope.open .letter {
+    top: 0;
+  }
 
-    .envelope.open .letter {
-      top: 0;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+</style>
 </head>
 <body>
 
-  <!-- Candle Section -->
-  <div id="candle-section" class="section">
-    <div id="candle"></div>
-    <p id="blown">You blew out the candles! 🥳🎉</p>
-  </div>
+<div id="candle-section" class="section">
+  <div id="candle"></div>
+  <p id="blown">You blew out the candles! 🥳🎉</p>
+</div>
 
-  <!-- Picture Section -->
-  <div id="picture-section" class="section">
-    <h2>🎬 PICTURE ABHI BHI BAAKI HAI 🎬</h2>
-  </div>
+<div id="picture-section" class="section">
+  <h2>🎬 PICTURE ABHI BHI BAAKI HAI 🎬</h2>
+</div>
 
-  <!-- Envelope Section -->
-  <div id="envelope-section" class="section">
-    <div class="envelope-container" onclick="openEnvelope()">
-      <div class="envelope" id="envelope">
-        <div class="flap"></div>
-        <div class="letter">
-          <p>Dear Sherly,</p>
-          <p>Happy Birthday! 🎉</p>
-          <p>
-            On your special day, I just wanted to say how much you mean to me. 💖<br><br>
-            You're the sunshine on my cloudiest days, the calm in my storms, and the laughter in my silence.<br><br>
-            We may be apart for miles, we may don't meet daily but always remember that I would always love you like I always did.<br><br>
-            The strings of my breath always look for the muse of its rhythm<br>
-            Rhythm to fly<br>
-            Rhythm for brew<br>
-            And in you, that rhythm softly grew—<br>
-            A song of joy, of time well spent,<br>
-            Of laughter shared, of hearts unbeat.<br>
-            Today, the tune just plays for you,<br>
-            A birthday wish in every hue—<br>
-            May your days compose a melody<br>
-            Of love, of peace, and harmony.<br><br>
-            I hope this little app made you smile and gave you a tiny glimpse of how special you are to me.<br><br>
-            May your birthday be filled with love, joy, and a million happy memories. 🎉🎂<br><br>
-            Happy Birthday once again! 🎈<br><br>
-            Hope this little app made you smile and feel special ^_^
-          </p>
-          <p>With love,</p>
-          <p>From Your luv 💖</p>
-        </div>
+<div id="envelope-section" class="section">
+  <div class="envelope-container" onclick="openEnvelope()">
+    <div class="envelope" id="envelope">
+      <div class="flap"></div>
+      <div class="letter">
+        <p>Dear Sherly,</p>
+        <p>Happy Birthday! 🎉</p>
+        <p>
+          On your special day, I just wanted to say how much you mean to me. 💖<br><br>
+          You're the sunshine on my cloudiest days, the calm in my storms, and the laughter in my silence.<br><br>
+          We may be apart for miles, we may don't meet daily but always remember that I would always love you like I always did.<br><br>
+          The strings of my breath always look for the muse of its rhythm<br>
+          Rhythm to fly<br>
+          Rhythm for brew<br>
+          And in you, that rhythm softly grew—<br>
+          A song of joy, of time well spent,<br>
+          Of laughter shared, of hearts unbeat.<br>
+          Today, the tune just plays for you,<br>
+          A birthday wish in every hue—<br>
+          May your days compose a melody<br>
+          Of love, of peace, and harmony.<br><br>
+          I hope this little app made you smile and gave you a tiny glimpse of how special you are to me.<br><br>
+          May your birthday be filled with love, joy, and a million happy memories. 🎉🎂<br><br>
+          Happy Birthday once again! 🎈<br><br>
+          Hope this little app made you smile and feel special ^_^
+        </p>
+        <p>With love,</p>
+        <p>From Your luv 💖</p>
       </div>
     </div>
   </div>
+</div>
 
 <script>
-  let audioContext = null;
-  let analyser = null;
-  let dataArray = null;
-  let blown = false;
-
-  function startMic() {
-    navigator.mediaDevices.getUserMedia({ audio: true })
-      .then(stream => {
-        audioContext = new (window.AudioContext || window.webkitAudioContext)();
-        const source = audioContext.createMediaStreamSource(stream);
-        analyser = audioContext.createAnalyser();
-        source.connect(analyser);
-        analyser.fftSize = 256;
-        const bufferLength = analyser.frequencyBinCount;
-        dataArray = new Uint8Array(bufferLength);
-        listenToMic();
-      })
-      .catch(error => {
-        console.error("Mic access denied", error);
-      });
-  }
-
-  function listenToMic() {
-    requestAnimationFrame(listenToMic);
-    if (blown) return;
-
-    analyser.getByteFrequencyData(dataArray);
-    let volume = dataArray.reduce((a, b) => a + b) / dataArray.length;
-
-    if (volume > 30) {  // Adjust if needed
-      blown = true;
-
-      document.getElementById("candle").style.backgroundImage = "url('{{candle_blown}}')";
-      document.getElementById("blown").style.display = "block";
-
-      // Show picture section after 1 sec
-      setTimeout(() => {
-        document.getElementById("picture-section").style.display = "block";
-        window.scrollTo({ 
-          top: document.getElementById("picture-section").offsetTop, 
-          behavior: "smooth" 
-        });
-      }, 1000);
-
-      // Show envelope section after 3 sec
-      setTimeout(() => {
-        document.getElementById("envelope-section").style.display = "block";
-        window.scrollTo({ 
-          top: document.getElementById("envelope-section").offsetTop, 
-          behavior: "smooth" 
-        });
-      }, 3000);
-    }
-  }
-
   function openEnvelope() {
-    document.getElementById("envelope").classList.add("open");
+    document.getElementById('envelope').classList.add('open');
   }
-
-  startMic();
 </script>
 
 </body>
