--- a/blow_candle.html
+++ b/blow_candle.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <style>
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 320px;
+      overflow-x: hidden;
+    }
+
+    
     body {
       background-color: #fff0f5;
       font-family: 'Georgia', serif;
