--- a/blow_candle.html
+++ b/blow_candle.html
@@ -181,10 +181,9 @@
                         A birthday wish in every hue—<br>
                         May your days compose a melody<br>
                         Of love, of peace, and harmony.<br><br>
-                        I hope this little app made you smile and gave you a tiny glimpse of how special you are to me.<br><br>
+                        I hope this little app made you smile and gave you a tiny glimpse of how special you are to me^_^<br><br>
                         May your birthday be filled with love, joy, and a million happy memories. 🎉🎂<br><br>
                         Happy Birthday once again! 🎈<br><br>
-                        Hope this little app made you smile and feel special ^_^
                     </p>
                     <p>With love,</p>
                     <p>From Your luv 💖</p>
@@ -271,3 +270,4 @@
 
 </body>
 </html>
+
